k가 아니라 c야 바보야

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.looooong.asyncimageloader_forked_by_teamdodoko",
+  "name": "com.looooong.asyncimageloader_forked_by_teamdodoco",
   "version": "727.1.3",
-  "displayName": "Asynchronous Image Loader (Forked by TEAM Dodoko)",
+  "displayName": "Asynchronous Image Loader (Forked by TEAM Dodoco)",
   "unity": "2019.1",
   "keywords": [
     "image",
